# AGV

./: README.md
firmware/ESP32/: platformio.ini
firmware/ESP32/src/: config.h  crc.h  main.cpp  stacklight.cpp
firmware/ESP32/src/battery/: battery.cpp  battery.h
firmware/ESP32/src/crc/: crc.cpp  crc.h
firmware/STM32/: Makefile
firmware/STM32/inc/: comms.h  config.h  control.h  current_monitor.h  encoders.h  estop.h  flash_io.h  log.h  motors.h  nav.h  nav_traj.h  pid.h  proximity.h  types.h
firmware/STM32/src/: adc.c  cmd.c  config.h  crc.c  current_monitor.c  estop.c  hx711.c  log.c  main.c  motors.c  nav.c  nav_traj.c  odometry.c  params.c  types.h
firmware/UNO/: platformio.ini
firmware/UNO/src/: main.cpp
reference/: architecture.md
reference/codes/: 1.c
reference/codes/STM32_old/: Makefile  startup_stm32f051x8.s  stm32f051x8.ld
software/: AGV Workstation.html
software/GUI/: AGV Workstation.html
software/GUI/components/: protocol.jsx  shared.jsx  tabs1.jsx  tabs2.jsx  tabs3.jsx
software/GUI_tunning/: requirements.txt  tune.py
software/bridge/: .gitignore  99-agv.rules  filters.yaml
software/bridge/src/agv_bridge/: package.xml  setup.py
software/bridge/src/agv_bridge/agv_bridge/: frame.py  jukebox_node.py  lidar_node.py  panel_node.py  protocol.py  uart_bridge_node.py  ws_bridge_node.py
software/bridge/src/agv_bridge/launch/: bridge.launch.py
software/bridge/src/agv_msgs/: CMakeLists.txt  package.xml
software/bridge/src/agv_msgs/msg/: LidarSegments.msg  LogEntry.msg  ParamUpdate.msg  ParamUpdateBatch.msg  RampPoint.msg  TlmCore.msg  TlmDrive.msg  TlmQtr.msg  TlmSensors.msg
software/bridge/src/agv_msgs/srv/: LoadRampCurve.srv  LoadTrajectory.srv  LogClear.srv  OverrideCaution.srv  OverrideEstopSource.srv  QtrCalibrate.srv  SetFunction.srv  SetMode.srv
software/components/: protocol.jsx  shared.jsx  tabs1.jsx  tabs3.jsx
(+132 files in other folders)
