<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bridge</name>
  <version>0.1.0</version>
  <description>UART and WebSocket bridges between the AGV firmware and the workstation GUI.</description>
  <maintainer email="nabetse069@gmail.com">AGV</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>agv_msgs</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
